# pipemenu

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  shell.nix
.github/: FUNDING.yml
.github/workflows/: pull-request.yml  release.yml
src/: main.rs
