[package]
name = "pipemenu"
version = "0.4.0"
edition = "2021"
description = "Gnome (GTK4 + libadwaita) dmenu alternative"
license = "GPL-3.0"
repository = "https://github.com/soanvig/pipemenu"
readme = "README.md"
keywords = ["gnome", "gtk", "dmenu", "adwaita", "gtk4"]

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_5"] }
clap = { version = "4.5.23" }
# v4_16 doesn't work on ubuntu-latest (github image)
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_14"] }
textdistance = "1.1.1"

[profile.release]
lto = true
